# rocket-erp

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  manage.py  manage.sh  pyproject.toml  requirements.txt  setup.cfg  tests.sh
accounts/: apps.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
api/serializers/: accounts.py
api/views/: accounts.py
backend/: urls.py  wsgi.py
backend/accounts/: admin.py  models.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: utils.py
backend/customer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/customer/migrations/: 0001_initial.py  0002_auto_20210624_1345.py  0003_alter_customer_jp.py  0004_auto_20210624_2317.py
backend/project/: admin.py  apps.py  models.py
backend/project/migrations/: 0001_initial.py  0002_projectconsumables_quantity.py  0003_auto_20210624_2317.py
backend/settings/: asgi.py  dev.py  urls.py  wsgi.py
backend/utils/: inspectors.py  models.py  serializers.py  utils.py
core/: apps.py  urls.py  utils.py  views.py
docs/: MVP.md  Specification.md
frontend/: nuxt.config.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
frontend/html/: error.html  layout.html
frontend/layouts/: default.vue  starter.vue
frontend/middleware/: authenticated.js  noauth.js  router-auth.js
frontend/mixins/: form-mixin.js
frontend/pages/: index.vue  login.vue  profile.vue  regular.vue  starter-page.vue  typography.vue
frontend/plugins/: axios.js  misc-functions.js
frontend/services/: api.js  customer_service.js  profile_service.js
frontend/src/: main.js
frontend/store/: customers.js  index.js  profile.js
frontend/util/: authCustomStrategy.js
projects/: apps.py  forms.py  models.py  views.py
projects/migrations/: 0003_auto_20210607_2301.py
rocket_erp/: asgi.py  env.py  settings.py  urls.py  views.py  wsgi.py
rocket_erp/templates/: error.html  home.html  index.html
(+77 files in other folders)
