[tool.poetry]
name = "rocket_erp_back"
version = "0.1.0"
description = ""
authors = ["quanttyo <divergere.ratio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^4.7.1"
drf-yasg = "^1.20.0"
django-rest-polymorphic = "^0.1.9"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
